--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@fastify/static": "^6.5.0",
     "axios": "^0.27.2",
     "fastify": "^4.5.3",
+    "form-data": "^4.0.0",
     "kavenegar": "^1.1.4"
   }
 }
